yuv 播放器基本完成，后面可以把这个yuv的渲染部分修改到myffmpeg工程下面

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library( native-lib
              src/main/cpp/MyOpenGlUtils.cpp
              src/main/cpp/Matrix.cpp
              src/main/cpp/opengl_table.cpp
+             src/main/cpp/MyThread.cpp
              )
 
 
